Added hero section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>SweetPea Delights</title>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg fixed-top border-bottom">
+<nav class="navbar navbar-expand-lg fixed-top">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">
             <img src="./assets/images/logo.png" alt="logo" width=180px; height="80px"/>
@@ -44,6 +44,21 @@
         </div>
     </div>
 </nav>
+<div class="container col-xxl-8 px-4 py-5">
+    <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+        <div class="col-10 col-sm-8 col-lg-6">
+            <img src="./assets/images/choco-dacquoise.jpg" class="d-block mx-lg-auto" alt="hero image" loading="lazy">
+        </div>
+    <div class="col-lg-6">
+        <h1 class="display-5 fw-bold lh-1 mb-3">Your DELIGHT of Happiness</h1>
+        <p class="lead">Explore our wide variety of cakes and pastries that will delight the sweetness in you.</p>
+        <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+            <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Order Now</button>
+            <button type="button" class="btn btn-outline-secondary btn-lg px-4">Locations</button>
+        </div>
+    </div>
+    </div>
+</div>
 
     <script src="./assets/scripts/bootstrap.bundle.min.js"></script>
 </body>
