Update css for buttons

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./assets/styles/bootstrap.min.css" rel="stylesheet">
-    <link href="./assets/styles/style.css" rel="stylesheet">
+    <link href="./assets/styles/style.css" rel="stylesheet" type="text/css">
     <title>SweetPea Delights</title>
 </head>
 <body>
@@ -45,9 +45,9 @@
     </div>
 </nav>
 <div class="container col-xxl-8 px-4 py-5">
-    <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+    <div class="hero-image row flex-lg-row-reverse align-items-center g-5 py-5">
         <div class="col-10 col-sm-8 col-lg-6">
-            <img src="./assets/images/choco-dacquoise.jpg" class="d-block mx-lg-auto" alt="hero image" loading="lazy">
+            <img src="./assets/images/toffee-caramel.jpg" class="d-block mx-lg-auto" alt="hero image" loading="lazy">
         </div>
     <div class="col-lg-6">
         <h1 class="display-5 fw-bold lh-1 mb-3">Your DELIGHT of Happiness</h1>
