--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <link href="./assets/styles/bootstrap.min.css" rel="stylesheet">
     <link href="./assets/styles/style.css" rel="stylesheet" type="text/css">
     <title>SweetPea Delights</title>
@@ -44,8 +46,8 @@
         </div>
     </div>
 </nav>
-<div class="container col-xxl-8 px-4 py-5">
-    <div class="hero-image row flex-lg-row-reverse align-items-center g-5 py-5">
+<div class="container col-xxl-10 px-5 py-5">
+    <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
         <div class="col-10 col-sm-8 col-lg-6">
             <img src="./assets/images/toffee-caramel.jpg" class="d-block mx-lg-auto" alt="hero image" loading="lazy">
         </div>
@@ -53,12 +55,46 @@
         <h1 class="display-5 fw-bold lh-1 mb-3">Your DELIGHT of Happiness</h1>
         <p class="lead">Explore our wide variety of cakes and pastries that will delight the sweetness in you.</p>
         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-            <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Order Now</button>
-            <button type="button" class="btn btn-outline-secondary btn-lg px-4">Locations</button>
+            <button type="button" class="btn btn-primary btn-lg px-5 me-md-2">Order Now</button>
         </div>
     </div>
     </div>
 </div>
+
+<div id="demo" class="carousel slide" data-bs-ride="carousel">
+
+    <div class="carousel-indicators">
+        <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+        <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+        <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+    </div>
+
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="./assets/images/choco-dacquoise.jpg" alt="Chocolate Dacquoise" class="d-block" style="width:100%">
+        </div>
+        <div class="carousel-item">
+            <img src="./assets/images/german-choco.jpg" alt="German Chocolate" class="d-block" style="width:100%">
+        </div>
+        <div class="carousel-item">
+            <img src="./assets/images/bundt-cake.jpg" alt="Bundt Cake" class="d-block" style="width:100%">
+        </div>
+        <div class="carousel-item">
+            <img src="./assets/images/red-velvet.jpeg" alt="Red Velvet" class="d-block" style="width:100%">
+        </div>
+        <div class="carousel-item">
+            <img src="./assets/images/italian-lemon.jpg" alt="Italian Lemon" class="d-block" style="width:100%">
+        </div>
+    </div>
+    <!-- Left and right controls/icons -->
+    <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+        <span class="carousel-control-next-icon"></span>
+    </button>
+</div>
+
 
     <script src="./assets/scripts/bootstrap.bundle.min.js"></script>
 </body>
