Modify carousel position

--- a/index.html
+++ b/index.html
@@ -46,20 +46,6 @@
         </div>
     </div>
 </nav>
-<div class="container col-xxl-10 px-5 py-5">
-    <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
-        <div class="col-10 col-sm-8 col-lg-6">
-            <img src="./assets/images/toffee-caramel.jpg" class="d-block mx-lg-auto" alt="hero image" loading="lazy">
-        </div>
-    <div class="col-lg-6">
-        <h1 class="display-5 fw-bold lh-1 mb-3">Your DELIGHT of Happiness</h1>
-        <p class="lead">Explore our wide variety of cakes and pastries that will delight the sweetness in you.</p>
-        <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-            <button type="button" class="btn btn-primary btn-lg px-5 me-md-2">Order Now</button>
-        </div>
-    </div>
-    </div>
-</div>
 
 <div id="demo" class="carousel slide" data-bs-ride="carousel">
 
@@ -67,6 +53,8 @@
         <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
         <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
         <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+        <button type="button" data-bs-target="#demo" data-bs-slide-to="3"></button>
+        <button type="button" data-bs-target="#demo" data-bs-slide-to="4"></button>
     </div>
 
     <div class="carousel-inner">
@@ -86,7 +74,7 @@
             <img src="./assets/images/italian-lemon.jpg" alt="Italian Lemon" class="d-block" style="width:100%">
         </div>
     </div>
-    <!-- Left and right controls/icons -->
+
     <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
         <span class="carousel-control-prev-icon"></span>
     </button>
