Update carousel style

--- a/index.html
+++ b/index.html
@@ -59,19 +59,24 @@
 
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="./assets/images/choco-dacquoise.jpg" alt="Chocolate Dacquoise" class="d-block" style="width:100%">
+            <img src="./assets/images/choco-dacquoise.jpg" alt="Chocolate Dacquoise" class="d-block w-100">
+            <div class="carousel-caption"><h2>Chocolate Dacquoise Cake</h2></div>
         </div>
         <div class="carousel-item">
-            <img src="./assets/images/german-choco.jpg" alt="German Chocolate" class="d-block" style="width:100%">
+            <img src="./assets/images/german-choco.jpg" alt="German Chocolate" class="d-block w-100">
+            <div class="carousel-caption"><h2>Chocolate German Cake</h2></div>
         </div>
         <div class="carousel-item">
-            <img src="./assets/images/bundt-cake.jpg" alt="Bundt Cake" class="d-block" style="width:100%">
+            <img src="./assets/images/bundt-cake.jpg" alt="Bundt Cake" class="d-block w-100">
+            <div class="carousel-caption"><h2>Vanilla Bundt Cake</h2></div>
         </div>
         <div class="carousel-item">
-            <img src="./assets/images/red-velvet.jpeg" alt="Red Velvet" class="d-block" style="width:100%">
+            <img src="./assets/images/zserbo.jpg" alt="Zserbo" class="d-block w-100">
+            <div class="carousel-caption"><h2>Hungarian Zserbo Cake</h2></div>
         </div>
         <div class="carousel-item">
-            <img src="./assets/images/italian-lemon.jpg" alt="Italian Lemon" class="d-block" style="width:100%">
+            <img src="./assets/images/italian-lemon.jpg" alt="Italian Lemon" class="d-block w-100">
+            <div class="carousel-caption"><h2>Italian Lemon Cake</h2></div>
         </div>
     </div>
 
