--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <link href="./assets/styles/bootstrap.min.css" rel="stylesheet">
     <link href="./assets/styles/style.css" rel="stylesheet" type="text/css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alice&family=Sacramento&display=swap" rel="stylesheet">
+    <style> @import url('https://fonts.googleapis.com/css2?family=Alice&family=Sacramento&display=swap'); </style>
     <title>SweetPea Delights</title>
 </head>
 <body>
@@ -24,16 +25,16 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="#">Products</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Products</a>
+                    <a class="nav-link" href="#">Location</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Gallery</a>
+                    <a class="nav-link" href="#">Order Nows</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
+                    <a class="nav-link" href="#">Contact Us</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">About</a>
@@ -60,23 +61,18 @@
     <div class="carousel-inner">
         <div class="carousel-item active">
             <img src="./assets/images/choco-dacquoise.jpg" alt="Chocolate Dacquoise" class="d-block w-100">
-            <div class="carousel-caption"><h2>Chocolate Dacquoise Cake</h2></div>
         </div>
         <div class="carousel-item">
             <img src="./assets/images/german-choco.jpg" alt="German Chocolate" class="d-block w-100">
-            <div class="carousel-caption"><h2>Chocolate German Cake</h2></div>
         </div>
         <div class="carousel-item">
             <img src="./assets/images/bundt-cake.jpg" alt="Bundt Cake" class="d-block w-100">
-            <div class="carousel-caption"><h2>Vanilla Bundt Cake</h2></div>
         </div>
         <div class="carousel-item">
             <img src="./assets/images/zserbo.jpg" alt="Zserbo" class="d-block w-100">
-            <div class="carousel-caption"><h2>Hungarian Zserbo Cake</h2></div>
         </div>
         <div class="carousel-item">
             <img src="./assets/images/italian-lemon.jpg" alt="Italian Lemon" class="d-block w-100">
-            <div class="carousel-caption"><h2>Italian Lemon Cake</h2></div>
         </div>
     </div>
 
@@ -87,8 +83,20 @@
         <span class="carousel-control-next-icon"></span>
     </button>
 </div>
-
-
-    <script src="./assets/scripts/bootstrap.bundle.min.js"></script>
+<div class="container col-xxl-10 px-5 py-5">
+    <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+        <div class="col-10 col-sm-8 col-lg-6">
+            <img src="./assets/images/toffee-caramel.jpg" class="d-block mx-lg-auto" alt="hero image" loading="lazy">
+        </div>
+    <div class="col-lg-6">
+        <h1 class="hero-text display-5 fw-bold lh-1 mb-3">Your Delightful of Happiness</h1>
+        <p class="lead">Explore our wide variety of cakes and pastries that will delight the sweetness in you.</p>
+        <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+            <button type="button" class="btn btn-primary btn-lg px-5 me-md-2">Order Now</button>
+        </div>
+    </div>
+    </div>
+</div>
+<script src="./assets/scripts/bootstrap.bundle.min.js"></script>
 </body>
 </html>
