--- a/index.html
+++ b/index.html
@@ -28,12 +28,6 @@
                     <a class="nav-link active" aria-current="page" href="#">Products</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Location</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Order Nows</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link" href="#">Contact Us</a>
                 </li>
                 <li class="nav-item">
@@ -83,13 +77,13 @@
         <span class="carousel-control-next-icon"></span>
     </button>
 </div>
-<div class="container col-xxl-10 px-5 py-5">
-    <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+<div class="container col-xxl-8 px-4">
+    <div class="row flex-lg-row-reverse align-items-center g-5">
         <div class="col-10 col-sm-8 col-lg-6">
             <img src="./assets/images/toffee-caramel.jpg" class="d-block mx-lg-auto" alt="hero image" loading="lazy">
         </div>
     <div class="col-lg-6">
-        <h1 class="hero-text display-5 fw-bold lh-1 mb-3">Your Delightful of Happiness</h1>
+        <h1 class="hero-text display-5 fw-bold lh-1 mb-">Your Delightful of Happiness</h1>
         <p class="lead">Explore our wide variety of cakes and pastries that will delight the sweetness in you.</p>
         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
             <button type="button" class="btn btn-primary btn-lg px-5 me-md-2">Order Now</button>
@@ -99,16 +93,14 @@
 </div>
 <div class="container">
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-        <p class="col-md-4 mb-0 text-muted">&copy; 2021 Company, Inc</p>
+        <p class="col-md-4 mb-0 text-muted">&copy; SweetPea Bakeries, Inc. 2023</p>
         <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
         <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
         </a>
         <ul class="nav col-md-4 justify-content-end">
             <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Pricing</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Products</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Contacts</a></li>
         </ul>
     </footer>
 </div>
