--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 <nav class="navbar navbar-expand-lg fixed-top">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
             <img src="./assets/images/logo.png" alt="logo" width=180px; height="80px"/>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -25,7 +25,10 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Products</a>
+                    <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./products.html">Products</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Contact Us</a>
@@ -48,8 +51,6 @@
         <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
         <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
         <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
-        <button type="button" data-bs-target="#demo" data-bs-slide-to="3"></button>
-        <button type="button" data-bs-target="#demo" data-bs-slide-to="4"></button>
     </div>
 
     <div class="carousel-inner">
@@ -61,12 +62,6 @@
         </div>
         <div class="carousel-item">
             <img src="./assets/images/bundt-cake.jpg" alt="Bundt Cake" class="d-block w-100">
-        </div>
-        <div class="carousel-item">
-            <img src="./assets/images/zserbo.jpg" alt="Zserbo" class="d-block w-100">
-        </div>
-        <div class="carousel-item">
-            <img src="./assets/images/italian-lemon.jpg" alt="Italian Lemon" class="d-block w-100">
         </div>
     </div>
 
@@ -98,8 +93,8 @@
         <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
         </a>
         <ul class="nav col-md-4 justify-content-end">
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Products</a></li>
+            <li class="nav-item"><a href="./index.html" class="nav-link px-2 text-muted">Home</a></li>
+            <li class="nav-item"><a href="./products.html" class="nav-link px-2 text-muted">Products</a></li>
             <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Contacts</a></li>
         </ul>
     </footer>
