Update products page

--- a/products.html
+++ b/products.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./assets/styles/bootstrap.min.css" rel="stylesheet">
     <link href="./assets/styles/style.css" rel="stylesheet" type="text/css">
+    <link href="./assets/styles/modules.css" rel="stylesheet" type="text/css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alice&family=Sacramento&display=swap" rel="stylesheet">
     <style> @import url('https://fonts.googleapis.com/css2?family=Alice&family=Sacramento&display=swap'); </style>
@@ -33,13 +34,12 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">Contact Us</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
-                    </li>
                 </ul>
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
+                <button>
+                    <box-icon name='cart'>
+                        <img src="./assets/images/bx-cart.svg" />
+                    </box-icon>
+                </button>
                 </form>
             </div>
         </div>
