--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./assets/styles/bootstrap.min.css" rel="stylesheet">
     <link href="./assets/styles/style.css" rel="stylesheet" type="text/css">
+    <link href="./assets/styles/modules.css" rel="stylesheet" type="text/css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alice&family=Sacramento&display=swap" rel="stylesheet">
     <style> @import url('https://fonts.googleapis.com/css2?family=Alice&family=Sacramento&display=swap'); </style>
