--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="./assets/styles/bootstrap.min.css" rel="stylesheet">
     <link href="./assets/styles/style.css" rel="stylesheet" type="text/css">
     <link href="./assets/styles/modules.css" rel="stylesheet" type="text/css">
+    <link href="./assets/styles/hero.css" rel="stylesheet" type="text/css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alice&family=Sacramento&display=swap" rel="stylesheet">
     <style> @import url('https://fonts.googleapis.com/css2?family=Alice&family=Sacramento&display=swap'); </style>
@@ -33,9 +34,6 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Contact Us</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
                 </li>
             </ul>
             <form class="d-flex" role="search">
@@ -78,11 +76,11 @@
         <div class="col-10 col-sm-8 col-lg-6">
             <img src="./assets/images/toffee-caramel.jpg" class="d-block mx-lg-auto" alt="hero image" loading="lazy">
         </div>
-    <div class="col-lg-6">
-        <h1 class="hero-text display-5 fw-bold lh-1 mb-">Your Delightful of Happiness</h1>
+    <div class=" hero-text col-lg-6">
+        <h1 class="display-5 fw-bold lh-1 mb-">Your Delightful of Happiness</h1>
         <p class="lead">Explore our wide variety of cakes and pastries that will delight the sweetness in you.</p>
         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-            <button type="button" class="btn btn-primary btn-lg px-5 me-md-2">Order Now</button>
+            <a href="./products.html"><button type="button" class="btn btn-primary btn-lg px-5 me-md-2">Order Now</button></a>
         </div>
     </div>
     </div>
