Updated css class naming convention

--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
     <link href="./assets/styles/bootstrap.min.css" rel="stylesheet">
     <link href="./assets/styles/style.css" rel="stylesheet" type="text/css">
     <link href="./assets/styles/modules.css" rel="stylesheet" type="text/css">
-    <link href="./assets/styles/hero.css" rel="stylesheet" type="text/css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alice&family=Sacramento&display=swap" rel="stylesheet">
     <style> @import url('https://fonts.googleapis.com/css2?family=Alice&family=Sacramento&display=swap'); </style>
     <title>SweetPea Delights</title>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg fixed-top">
+<nav class="header navbar navbar-expand-lg fixed-top">
     <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
             <img src="./assets/images/logo.png" alt="logo" width=180px; height="80px"/>
@@ -38,7 +37,7 @@
             </ul>
             <form class="d-flex" role="search">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
+                <button class="header-btn btn btn-outline-success" type="submit">Search</button>
             </form>
         </div>
     </div>
@@ -52,7 +51,7 @@
         <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
     </div>
 
-    <div class="carousel-inner">
+    <div class="carousel-slider">
         <div class="carousel-item active">
             <img src="./assets/images/choco-dacquoise.jpg" alt="Chocolate Dacquoise" class="d-block w-100">
         </div>
@@ -76,13 +75,13 @@
         <div class="col-10 col-sm-8 col-lg-6">
             <img src="./assets/images/toffee-caramel.jpg" class="d-block mx-lg-auto" alt="hero image" loading="lazy">
         </div>
-    <div class=" hero-text col-lg-6">
-        <h1 class="display-5 fw-bold lh-1 mb-">Your Delightful of Happiness</h1>
-        <p class="lead">Explore our wide variety of cakes and pastries that will delight the sweetness in you.</p>
-        <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-            <a href="./products.html"><button type="button" class="btn btn-primary btn-lg px-5 me-md-2">Order Now</button></a>
+        <div class=" hero-text col-lg-6">
+            <h1 class="display-5 fw-bold lh-1">Your Delightful of Happiness</h1>
+            <p class="lead">Explore our wide variety of cakes and pastries that will delight the sweetness in you.</p>
+            <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+                <a href="./products.html"><button type="button" class="hero-btn btn btn-primary btn-lg px-5 me-md-2">Order Now</button></a>
+            </div>
         </div>
-    </div>
     </div>
 </div>
 <div class="container">
