--- a/products.html
+++ b/products.html
@@ -13,7 +13,7 @@
     <title>Products</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg fixed-top">
+    <nav class="header navbar navbar-expand-lg fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="./index.html">
                 <img src="./assets/images/logo.png" alt="logo" width=180px; height="80px"/>
