Update grid layout for products page

--- a/products.html
+++ b/products.html
@@ -32,32 +32,41 @@
                         <a class="nav-link" href="./products.html">Products</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact Us</a>
+                        <a class="nav-link" href="#">About Us</a>
                     </li>
                 </ul>
-                <button>
-                    <box-icon name='cart'>
-                        <img src="./assets/images/bx-cart.svg" />
-                    </box-icon>
-                </button>
-                </form>
+                    <button class="header-btn btn btn-outline-success" type="submit">Cart</button>
             </div>
         </div>
     </nav>
-    <div class="product">
-        <img src="./assets/images/croquembouche.jpg" alt="Croquembouche" style="width:100%">
-        <h1>Croquembouche</h1>
-        <p class="prices">$29.99</p>
-        <p>Some text about the jeans. Super slim and comfy lorem ipsum lorem jeansum. Lorem jeamsun denim lorem jeansum.</p>
-        <p><button>Add to Cart</button></p>
-        <img src="./assets/images/espresso-dacquoise.jpg" alt="Espresso Dacquoise" style="width:100%">
-        <h1>Espresso Dacquoise</h1>
-        <p class="prices">$34.99</p>
-        <p>Some text about the jeans. Super slim and comfy lorem ipsum lorem jeansum. Lorem jeamsun denim lorem jeansum.</p>
-        <p><button>Add to Cart</button></p>
+    <div class="product-row">
+        <div class="product product-col">
+            <img src="./assets/images/croquembouche.jpg" alt="Croquembouche">
+                <h1>Croquembouche</h1>
+                <p class="prices">$29.99</p>
+                <p><button>Add to Cart</button></p>
+        </div>
+        <div class="product product-col">
+            <img src="./assets/images/espresso-dacquoise.jpg" alt="Dacquoise">
+                <h1>Dacquoise</h1>
+                <p class="prices">$39.99</p>
+            <p><button>Add to Cart</button></p>
+        </div>
+        <div class="product product-col">
+            <img src="./assets/images/pavlova.jpg" alt="Pavlova">
+                <h1>Pavlova</h1>
+                <p class="prices">$34.99</p>
+            <p><button>Add to Cart</button></p>
+        </div>
+        <div class="product product-col">
+            <img src="./assets/images/orange-carrot.jpg" alt="Orange Carrot">
+                <h1>Carrot Cake</h1>
+                <p class="prices">$34.99</p>
+            <p><button>Add to Cart</button></p>
+        </div>
     </div>
 
-    <div class="container">
+    <div class=" footer-bar container">
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
             <p class="col-md-4 mb-0 text-muted">&copy; SweetPea Bakeries, Inc. 2023</p>
             <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
@@ -66,7 +75,7 @@
             <ul class="nav col-md-4 justify-content-end">
                 <li class="nav-item"><a href="./index.html" class="nav-link px-2 text-muted">Home</a></li>
                 <li class="nav-item"><a href="./products.html" class="nav-link px-2 text-muted">Products</a></li>
-                <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Contacts</a></li>
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
             </ul>
         </footer>
     </div>
